welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:2: error: ';' expected but '=' found.
  Var nbPas : Int = 0
                  ^Methods:3: error: ';' expected but ',' found.
  while (!estSurBiscuit) {avance(), nbPas = nbPas +1 ;}
                                  ^